@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  [Enhancements]
+  - Added "allowed" and "rejected" as synonyms for "whitelist" and "blacklist".
 
 v0.4.4    2023-07-03 23:44:56+01:00 Europe/London
   [Documentation]
